--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.12",
     "cra-template": "1.2.0",
     "konva": "^9.3.18",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-konva": "^19.0.2",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "three": "^0.172.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
