--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-konva": "^19.0.2",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
     "three": "^0.172.0",
     "web-vitals": "^4.2.4"
   },
